name:                nmssm-lightscalar
version:             0.1.0.0
synopsis:            For studies on the light scalar in the NMSSM
-- description:
bug-reports:         https://github.com/cbpark/nmssm-lightscalar/issues
license:             GPL-3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          cbpark@gmail.com
copyright:           (c) 2019 Chan Beom Park
category:            Physics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.3

source-repository head
  type:                git
  location:            https://github.com/cbpark/nmssm-lightscalar

executable nmssm
  main-is:             nmssm.hs
  other-modules:       Analysis.Data
                       Analysis.LoopFuncs
                       Analysis.SignalStrength
                       Analysis.Type
                       Analysis.EFT.Coupling
  -- other-extensions:
  build-depends:       base >=4.12 && < 5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
