name:                nmssm-lightscalar
version:             0.2.0.0
synopsis:            For studies on the light scalar in the NMSSM
-- description:
bug-reports:         https://github.com/cbpark/nmssm-lightscalar/issues
license:             GPL-3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          cbpark@gmail.com
copyright:           (c) 2019 Chan Beom Park
category:            Physics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.4, GHC == 8.4.4, GHC == 8.2.2

source-repository head
  type:                git
  location:            https://github.com/cbpark/nmssm-lightscalar

executable searchnmssm
  main-is:             searchnmssm.hs
  other-modules:       Analysis.Data
                       Analysis.LoopFuncs
                       Analysis.Type
                       Analysis.Util
                       Analysis.EFT.Coupling
                       Analysis.EFT.SignalStrength
                       Analysis.NMSSM
                       Analysis.NMSSM.Coupling
                       Analysis.NMSSM.Relations
  build-depends:       base >= 4.10 && < 5
                     , bytestring
                     , double-conversion
                     , mwc-random
                     , optparse-generic
                     -- , parallel
                     , transformers
                     , vector

  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances
  else
    build-depends:     fail == 4.9.*, semigroups == 0.18.*

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields
